--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "type": "module",
   "scripts": {
-    "build": "node main"
+    "ai": "node main",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "chalk": "^5.2.0",
     "chatgpt": "^5.2.2",
     "dotenv": "^16.0.3",
-    "markdown-it": "^13.0.1"
+    "markdown-it": "^13.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "prettier": "2.8.7"
+    "prettier": "2.8.7",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.0.0-beta.0",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.0-beta.2"
   }
 }
